--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -5,8 +5,6 @@
     </div>
 
     <div class="galery">
-        <div *ngFor="let image of images" >
-            <img src='{{image}}'/>
-        </div>
+        <img src='{{images[imageIndex]}}'/>
     </div>
 </div>
