add python script that writes all images to a file

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -5,6 +5,6 @@
     </div>
 
     <div class="galery">
-        <img src='{{images[imageIndex]}}'/>
+        <img src='./assets/img/{{images[imageIndex]}}'/>
     </div>
 </div>
