--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,27 +1,41 @@
 .main {
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch;
-    background-color: red;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  /* align-items: stretch; */
+  background-color: red;
+  /* justify-content: space-around; */
+  height: 100%;
 }
 
 .title {
-
-    /* display: flex;
+  /* display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: stretch; */
-    background-color: blue;
+  background-color: rgb(0, 53, 45);
+  flex: 1;
+  color: #fff;
 }
 
 .galery {
-
-    /* display: flex;
+  /* display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: stretch; */
-    background-color: green;
+  flex: 2;
+  height: fit-content;
+}
+body {
+  height: 100%;
+}
+
+footer {
+  background-color: rgb(0, 53, 45);
+  color: #fff;
+  padding: 0.5rem;
+}
+
+img {
+  width: 100%;
 }
