--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,10 +1,16 @@
 <div class="main">
-    <div class="title">
-        <p>Analog photography <br>
-        by Adela Jaworowska </p>
-    </div>
+  <div class="title">
+    <p>
+      Analog photography <br />
+      by Adela Jaworowska
+    </p>
+  </div>
 
-    <div class="galery">
-        <img src='./assets/img/{{images[imageIndex]}}'/>
-    </div>
+  <div class="galery">
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+  </div>
 </div>
+
+<footer>
+  <p>All rights reserved</p>
+</footer>
