--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -25,6 +25,12 @@
     align-items: stretch; */
   flex: 2;
   height: fit-content;
+  display: grid;
+
+  /*responsive grid*/
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+
+  gap: 1em;
 }
 body {
   height: 100%;
