--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -8,6 +8,14 @@
 
   <div class="galery">
     <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
   </div>
 </div>
 
