--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,39 +1,6 @@
-.main {
-  display: flex;
-  flex-direction: row;
-  /* flex-wrap: wrap; */
-  /* align-items: stretch; */
-  background-color: red;
-  /* justify-content: space-around; */
-  height: 100%;
-}
-
-.title {
-  /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch; */
-  background-color: rgb(0, 53, 45);
-  flex: 1;
-  color: #fff;
-}
-
-.galery {
-  /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch; */
-  flex: 2;
-  height: fit-content;
-  display: grid;
-
-  /*responsive grid*/
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-
-  gap: 1em;
-}
+/* main page */
 body {
-  height: 100%;
+  margin: 0;
 }
 
 footer {
@@ -43,5 +10,32 @@ footer {
 }
 
 img {
-  width: 100%;
+  /* width: 100%; */
+  object-fit: cover;
+  width: 18rem;
+  height: 18rem;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  background-color: red;
+  height: 100%;
+  margin: 0;
+}
+
+.leftSide {
+  background-color: rgb(0, 53, 45);
+  flex: 1;
+  color: #fff;
+}
+
+.galery {
+  flex: 2;
+  display: grid;
+
+  /*responsive grid*/
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  gap: 0.5rem;
+  justify-items: center;
 }
