--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <div class="title">
+  <div class="leftSide">
     <p>
       Analog photography <br />
       by Adela Jaworowska
@@ -8,14 +8,14 @@
 
   <div class="galery">
     <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
-    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 1] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 2] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 3] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 4] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 5] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 6] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 7] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 8] }}" />
   </div>
 </div>
 
