--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,9 +1,10 @@
 <div class="main">
   <div class="leftSide">
-    <p>
-      Analog photography <br />
-      by Adela Jaworowska
-    </p>
+    <h1>
+      ANALOG <br />
+      PHOTOGRAPHY
+    </h1>
+    <h2>by Adela Jaworowska</h2>
   </div>
 
   <div class="galery">
