global code moved outside components

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,12 @@
-<p>about-me works!</p>
+<div class="main">
+  <div class="leftSide">
+    <h1>ABOUT ME</h1>
+    <h2></h2>
+  </div>
+
+  <div class="aboutMe"></div>
+</div>
+
+<footer>
+  <p>All rights reserved</p>
+</footer>
