--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,6 +17,24 @@
     <img src="./assets/img/{{ images[imageIndex + 6] }}" />
     <img src="./assets/img/{{ images[imageIndex + 7] }}" />
     <img src="./assets/img/{{ images[imageIndex + 8] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 1] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 2] }}" />
+    <img id="img" src="./assets/img/{{ images[imageIndex + 3] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 4] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 5] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 6] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 7] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 8] }}" />
+    <img src="./assets/img/{{ images[imageIndex] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 1] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 2] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 3] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 4] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 5] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 6] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 7] }}" />
+    <img src="./assets/img/{{ images[imageIndex + 8] }}" />
   </div>
 </div>
 
