--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div class="appBody">
-  <router-outlet></router-outlet>
+  <div class="test">
+    <div>
+      <app-navbar></app-navbar>
+      <app-left-side></app-left-side>
+    </div>
+    <router-outlet></router-outlet>
+  </div>
+  <footer></footer>
 </div>
