--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,17 +1,22 @@
+
+
 img {
   /* width: 100%; */
   object-fit: cover;
-  width: 20rem;
-  height: 20rem;
+  width: 10rem;
+  height: 10rem;
 }
 
 .galery {
   flex: 2;
   display: grid;
-  margin: 5rem;
+  margin: 0;
+  padding: 3rem;
 
   /*responsive grid*/
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
   gap: 0.5rem;
   justify-items: center;
+  height: 100%;
+  width: 100%;
 }
