not sure about router-outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="appBody">
-  <div class="test">
+  <div class="flexContainer">
     <div>
       <app-navbar></app-navbar>
       <app-left-side></app-left-side>
