--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,5 +1,3 @@
-
-
 img {
   /* width: 100%; */
   object-fit: cover;
@@ -17,6 +15,6 @@ img {
   grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
   gap: 0.5rem;
   justify-items: center;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
 }
