--- a/src/styles.css
+++ b/src/styles.css
@@ -2,16 +2,23 @@
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html,
+body {
+  height: 100%;
+}
 
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif; 
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .appBody {
   height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: aquamarine;
 }
 
 footer {
@@ -35,18 +42,17 @@ h2 {
   margin: 0;
 }
 
- .main {
-  /*display: flex;
-  flex-direction: row; 
-  background-color: var(--light-beige);*/
+.main {
+  /* background-color: var(--light-beige); */
   background-color: pink;
   height: 100%;
   margin: 0;
+  width: 100%;
 }
 
-.test {
-  display: flex;
-  flex-direction: row;
+.flexContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
-  width: 100%
+  width: 100%;
 }
